--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Responsive Div with Image</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>137</h1>
+    <div class="responsive-container">
+      <img src="137.jpg" alt="Sample Image" />
+    </div>
   </body>
 </html>
